@@ -60,12 +60,17 @@ public abstract class AtomicReader extends IndexReader {
     return readerContext;
   }
 
-  /** Returns true if there are norms stored for this field. */
-  public boolean hasNorms(String field) throws IOException {
-    // backward compatible implementation.
-    // SegmentReader has an efficient implementation.
+  /** 
+   * Returns true if there are norms stored for this field.
+   * @deprecated (4.0) use {@link #getFieldInfos()} and check {@link FieldInfo#hasNorms()} 
+   *                   for the field instead.
+   */
+  @Deprecated
+  public final boolean hasNorms(String field) throws IOException {
     ensureOpen();
-    return normValues(field) != null;
+    // note: using normValues(field) != null would potentially cause i/o
+    FieldInfo fi = getFieldInfos().fieldInfo(field);
+    return fi != null && fi.hasNorms();
   }
 
   /**
